syntax = "proto3";

package bubbaloop.camera.v1;

// Common header for all image messages
message Header {
    uint64 acq_time = 1;    // Acquisition timestamp (nanoseconds)
    uint64 pub_time = 2;    // Publication timestamp (nanoseconds)
    uint32 sequence = 3;    // Frame sequence number
    string frame_id = 4;    // Camera/frame identifier
}

// Compressed image (H264, JPEG, etc.)
message CompressedImage {
    Header header = 1;
    string format = 2;      // "h264", "jpeg", etc.
    bytes data = 3;
}

// Raw decoded image (RGB, BGR, grayscale, etc.)
message RawImage {
    Header header = 1;
    uint32 width = 2;
    uint32 height = 3;
    string encoding = 4;    // "rgb8", "bgr8", "mono8", etc.
    uint32 step = 5;        // Row stride in bytes (width * bytes_per_pixel)
    bytes data = 6;
}
